Port to JDK 21; test with both oracle and corretto JVMs